--- a/Ngalegaan Kakawasan, Tamamo Silang - Sunda Priangan/docker-compose.yml
+++ b/Ngalegaan Kakawasan, Tamamo Silang - Sunda Priangan/docker-compose.yml
@@ -1,56 +1,35 @@
-version: '3.8'
+version: "3.9"
+
+networks:
+  proxy: {}
 
 services:
-  assembly-http-server:
+  nginx-proxy-manager:
+    image: jc21/nginx-proxy-manager:latest
+    container_name: nginx-proxy-manager
+    restart: unless-stopped
+    ports:
+      - "80:80"     # HTTP
+      - "443:443"   # HTTPS
+      - "81:81"     # NPM
+    environment:
+      TZ: Asia/Jakarta
+      DISABLE_IPV6: "true"
+    volumes:
+      - ./npm-data:/data
+      - ./npm-letsencrypt:/etc/letsencrypt
+    depends_on:
+      - love-notes-app
+    networks:
+      - proxy
+
+  love-notes-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: assembly-http-server
+    container_name: love-notes-app
     restart: unless-stopped
-    
-    # Port mapping - expose 6969 for Nginx Proxy Manager
-    ports:
-      - "6969:6969"
-    
-    # Environment variables
-    environment:
-      - TZ=UTC
-    
-    # Volumes for persistent data
-    volumes:
-      - ./notes_data:/app/notes_data
-      - ./logs:/app/logs
-    
-    # Resource limits
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.5'
-        reservations:
-          memory: 128M
-          cpus: '0.1'
-    
-    # Health check
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6969/main"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    
-    # Logging configuration
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    
-    # Networks
+    expose:
+      - "6969"
     networks:
-      - proxy-network
-
-networks:
-  proxy-network:
-    external: false
-    name: proxy-network
+      - proxy
